--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,17 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # СОВМЕСТИМЫЕ ВЕРСИИ
-  flutter_map: ^3.0.0    # Совместима с latlong2 0.8.1
-  latlong2: ^0.8.1       # Оставляем эту версию
-  
-  provider: ^6.1.1
-  exif: ^2.1.1
-  path_provider: ^2.1.1
-  path: ^1.8.3
-  image: ^4.0.17
-  file_picker: ^6.1.1
-  permission_handler: ^11.0.1
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
+  provider: ^6.1.5
+  exif: ^3.3.0
+  path_provider: ^2.1.3
+  path: ^1.9.0
 
   cupertino_icons: ^1.0.8
 
