--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.6.0
+  flutter: '>=3.27.0'
 
 dependencies:
   flutter:
@@ -15,9 +16,10 @@ dependencies:
   latlong2: ^0.9.1
   provider: ^6.1.5
   exif: ^3.3.0
-  path_provider: ^2.1.3
+  path_provider: ^2.1.5
   path: ^1.9.0
-
+  image: ^4.3.0
+  url_launcher: ^6.3.1
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
